--- a/whac a mole/index.html
+++ b/whac a mole/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Whac-a mole</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-    <h2>Your score : </h2>   
-    <h2 id="score">0</h2>
+    <div class="texts">
+        <h1 class="title">Whac-a mole Game</h1>
+        <div class="score">
+            <h2>Your score : </h2>
+            <h2 id="score">0</h2>
+        </div>
 
-    <h2>Time Left : </h2>   
-    <h2 id="time-left">60</h2>
+        <div class="time">
+            <h2>Time Left : </h2>
+            <h2 id="time-left">60</h2>
+        </div>
+    </div>
     <div class="grid">
         <div class="square" id="1"></div>
         <div class="square" id="2"></div>
@@ -29,4 +38,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
