--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" placeholder="O">
+        <input type="text" placeholder="O" id="inputBox">
         <div class="">
             <button class="operator">AC</button>
             <button class="operator">DEL</button>
@@ -18,7 +18,7 @@
         </div>
         <div class="">
             <button>7</button>
-            <button>8L</button>
+            <button>8</button>
             <button>9</button>
             <button class="operator">*</button>
         </div>
