--- a/QR code generator/index.html
+++ b/QR code generator/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="box">
-        <div class="qr-heqder">
+        <div class="qr-header">
             <h1>Generate QR Code</h1>
             <input type="text" id="qr-text" placeholder="Type youy text or URL">
             <div>
@@ -33,11 +33,12 @@
         <div class="qr-body"></div>
         <div class="qr-footer">
             <a href="#" id="generate">Generate</a>
-            <a href="#" id="download">Download</a>
+            <a href="#" id="download" download="QR_Code.png">Download</a>
         </div>
     </div>
 
     <script src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 </body>
 
 </html>
