image search app

--- a/image search app/index.html
+++ b/image search app/index.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Image Search App</h1>
+    <form>
+        <input type="text" id="search-input" placeholder="Search for images">
+        <button type="submit" id="search-button">Search</button>
+    </form>
+
+    <div class="search-results">
+    </div>
+    <button id="show-more-button">Show More</button>
 
     <script src="script.js"></script>
 </body>
