--- a/card-app display/index.html
+++ b/card-app display/index.html
@@ -1,67 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>card app display</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Hidden brand</a>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Card Display</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+<body>
+    <header>
+        <nav class="">
+            <div class="logo">
+                <h1>Logo</h1>
+            </div>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Product</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="login">Login</a></li>
+            </ul>
+            <div class="humberger">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+        </nav>
+    </header>
+
+    <main class="container">
+        <div class="page-title">
+            <h1>Les artilces</h1>
         </div>
-      </div>
-    </nav>
+        <div class="articles">
+            <div class="article">
+                <img src="./images/vuejs.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <div class="button">
+                        <a href="#" class="redMore-btn">Read Mores</a>
+                    </div>
+                </div>
+            </div>
+            <div class="article">
+                <img src="./images/portrait.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <a href="#" class="redMore-btn">Read Mores</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="./images/shoes3.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <a href="#" class="redMore-btn">Read Mores</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="./images/devops.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <a href="#" class="redMore-btn">Read Mores</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="./images/angular.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <a href="#" class="redMore-btn">Read Mores</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="./images/apple.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <a href="#" class="redMore-btn">Read Mores</a>
+                </div>
+            </div>
+            <div class="article">
+                <img src="./images/shoes1.jpg" alt="vuejs">
+                <div class="body">
+                    <h3 class="title">
+                        Lorem ipsum dolor sit amet.
+                    </h3>
+                    <p class="body-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, optio.
+                    </p>
+                    <a href="#" class="redMore-btn">Read Mores</a>
+                </div>
+            </div>
 
-    <div class="container">
-        <!-- {% block content %}{% endblock content %} -->
-        <h1>Text display</h1>
-    </div>
+        </div>
+    </main>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <script src="main.js"></script>
+</body>
 </html>
