final version 1 of card app display

--- a/card-app display/about.html
+++ b/card-app display/about.html
@@ -118,6 +118,11 @@
         Lorem ipsum dolor sit amet.
         Lorem ipsum dolor sit amet.
         Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet.
     </footer>
 
     <script src="main.js"></script>
