final update on about page on card display app

--- a/card-app display/about.html
+++ b/card-app display/about.html
@@ -37,31 +37,133 @@
                         <h1>
                             Lorem ipsum dolor sit amet.
                         </h1>
-                        <div class="timer-category">
-                            <p>28/01/2323 13:45:54</p>
-                            <p>Travel</p>
-                        </div>
                     </div>
                     <div class="article-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus hic neque iure dicta quia, ipsum soluta similique reprehenderit nemo ut natus laborum eos ad cupiditate, sit repellendus officia ratione, unde illo omnis consequatur harum. Blanditiis odio ut accusantium perferendis eum! Impedit, velit officia nobis veniam illo vel culpa quidem quibusdam deleniti qui fugit corrupti unde alias accusantium? Totam nulla in error distinctio accusantium autem officiis alias, quasi officia sint molestias labore saepe ducimus, cumque suscipit aliquid iure mollitia ipsum vel magnam consectetur doloremque? Rerum animi delectus aut distinctio in suscipit ab, magni dolor architecto iste alias vitae minus quibusdam temporibus. Perferendis laborum, placeat vitae accusamus iste earum similique tempore aliquid aut labore autem velit? Quod a, culpa optio sit dicta, laudantium odit tempora labore officia, hic eveniet. Ipsa labore ducimus dicta cupiditate atque facere cumque incidunt nobis repellendus commodi, omnis alias libero, delectus suscipit. Dolor, eos natus labore quae consequatur odio expedita rerum quis nam facere esse praesentium ut sit dolorem. Aperiam hic incidunt dolores illum, quibusdam eaque, accusantium corporis provident, porro praesentium corrupti fuga libero ducimus rem quisquam deleniti quasi doloribus voluptas. Totam qui laudantium consectetur nobis? Et rem, quasi tempore ea velit vitae praesentium ipsum eos porro assumenda explicabo laborum sequi necessitatibus ipsam expedita consequuntur dicta perferendis. Nesciunt, nihil soluta facere consequuntur ipsam velit dolorum, similique a asperiores voluptates iure repellat libero perspiciatis quidem, voluptas ducimus? Tenetur architecto pariatur, fugiat eius rerum, quo, corporis ea beatae perferendis nobis velit tempore? Cumque suscipit facere maxime iure illum perferendis assumenda eum. At, enim! Numquam, aliquid? Quia excepturi officia veritatis. Quas, ipsa? A possimus, odit itaque vero neque est ipsam corrupti quam delectus ex totam voluptate repellat iure. Nesciunt, alias. Ipsa accusamus facilis sit, quaerat, architecto asperiores, consequatur enim mollitia quisquam debitis ipsum libero quam ipsam! Itaque cumque necessitatibus, neque accusantium aperiam nihil aspernatur voluptates corrupti eius adipisci blanditiis in perferendis tempore repellendus optio enim maiores commodi. Hic odit officiis eaque molestiae quia atque saepe et libero. Excepturi harum a eius explicabo amet distinctio, sed, quae perspiciatis saepe delectus animi adipisci modi libero sunt nostrum tempore nemo! Dolores at aut eius sequi rerum. Aperiam vitae alias numquam, ipsa repudiandae aliquam sint cum! Rerum porro ipsum aliquid nulla, tenetur laboriosam maiores laborum magnam, eaque inventore minus maxime quisquam totam, iste hic odit asperiores temporibus illo enim! Consectetur eius repellat earum eos, impedit unde magni possimus laudantium quos, quod, libero ullam corrupti in. Illo doloribus vitae est, hic harum, accusamus possimus deleniti natus dolore sapiente ipsa repellendus repudiandae ratione optio placeat provident animi cupiditate? Exercitationem dicta laborum est aut, culpa, iste dolorem excepturi id in, consequatur vitae enim adipisci itaque officia debitis dolores placeat a odio quas. Nesciunt aperiam blanditiis aut at quis quo sapiente placeat reiciendis laboriosam, nobis, doloribus, non quaerat harum quae a repellendus. Impedit consequatur deserunt facilis odio dolorum distinctio a? Autem voluptatibus alias sapiente iure vel nihil velit. Odit laboriosam odio quod, blanditiis temporibus animi eveniet consequuntur adipisci alias ipsa provident esse voluptatibus iusto. Iure et explicabo odio eius.
+                        article description <br>
                         Lorem ipsum dolor sit amet.
                         Lorem ipsum dolor sit amet.
                         Lorem ipsum dolor sit amet.
                         Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="article-timer">
+                        <p>12/05/2023  15:15:45</p>
+                        <p>Travelling</p>
                     </div>
                     <div class="article-buttons">
                         <a href="#">Update Article</a>
-                        <a href="#">Update Article</a>
+                        <a href="#" class="delete">Update Article</a>
                         <a href="#">Update Article</a>
                     </div>
                 </div>
             </div>
             <div class="feddbacks">
-                Lorem ipsum dolor sit amet.
-                Lorem ipsum dolor sit amet.
-                Lorem ipsum dolor sit amet.
-                Lorem ipsum dolor sit amet.
-                Lorem ipsum dolor sit amet.
+                <div class="title">
+                    <h1>Feddbacks</h1>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
+                <div class="feddbacks-body">
+                    <div class="feeds">
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                        Lorem ipsum dolor sit amet.
+                    </div>
+                    <div class="feeds-button">
+                        <a href="#" class="update">Update</a>
+                        <a href="#" class="delete">Delete</a>
+                    </div>
+                </div>
             </div>
         </div>
 
