--- a/thot.com ui/login.html
+++ b/thot.com ui/login.html
@@ -33,11 +33,9 @@
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-  
                 <div class="card mb-3">
-  
+
                   <div class="card-body">
-  
                     <div class="pt-4 pb-2">
                       <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
                       <p class="text-center small">Enter your username & password to login</p>
@@ -47,7 +45,7 @@
   
                       <div class="col-12">
                         <label for="yourUsername" class="form-label">Email</label>
-                        <div class="input-group has-validation">
+                        <div class="input-group">
                           <span class="input-group-text" id="inputGroupPrepend">@</span>
                           <input type="text" name="username" class="form-control" id="yourUsername" required>
                           <div class="invalid-feedback">Please enter your username.</div>
@@ -67,28 +65,20 @@
                         </div>
                       </div>
                       <div class="col-12">
-                        <button class="btn btn-primary w-100" type="submit">Login</button>
+                        <button class="btn btn-danger w-100" type="submit">Login</button>
                       </div>
                       <div class="col-12">
-                        <p class="small mb-0">Don't have account? <a href="#">Create an account</a></p>
+                        <p class="small mb-0">Vous n'avez pas de compte? <a href="register.html">S'inscrire</a></p>
                       </div>
                     </form>
-  
                   </div>
+
                 </div>
-  
-                <div class="credits">
-                  <a href="index.html">Accueil</a>
-                </div>
-  
               </div>
             </div>
           </div>
-  
         </section>
-  
       </div>
-
   </main>
 
   <!-- Scroll Top Button -->
