add thot.com ui

--- a/thot.com ui/index.html
+++ b/thot.com ui/index.html
@@ -39,7 +39,7 @@
       <!-- Nav Menu -->
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero" class="active">Acceuil</a></li>
+          <li><a href="index.html#hero">Acceuil</a></li>
           <li><a href="index.html#about">About</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="index.html#contact">Contact</a></li>
@@ -51,7 +51,8 @@
       <a class="btn-getstarted" href="login.html">Ecrire une lettre</a>
 
     </div>
-  </header><!-- End Header -->
+  </header>
+  <!-- End Header -->
 
   <main id="main">
     <!-- Hero Section - Home Page -->
